namespace/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      runtimeClassName: nvidia
      securityContext:
        supplementalGroups:
          - 44 
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7359
              protocol: UDP
            - containerPort: 1900
              protocol: UDP
            - containerPort: 8096
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "4"
              memory: "4Gi"
              nvidia.com/gpu: "1"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
              subPath: media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          persistentVolumeClaim:
            claimName: media
