namespace/media/jellyfin/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`njellyfin.oglesby.io`)
      kind: Rule
      services:
        - name: jellyfin-ui
          port: 8096
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`njellyfin.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: jellyfin-ui
          port: 8096
